Changed hashing method and updated in main. Tested requests and responses with Postman

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,13 @@
      
       <div>
         <label for="email">Email</label>
-        <input type="text" name="email" placeholder="Email" class="input-field" required>
+        <input type="text" name="email" placeholder="Email" class="input-field" >
         <!-- <div>class="error-email"</div> -->
       </div>
 
       <div>
         <label for="password">Password</label>
-        <input type="password" name="password" placeholder="Password" class="input-field" required>
+        <input type="password" name="password" placeholder="Password" class="input-field" >
         <!-- <div>class="error-password"</div> -->
       </div>
 
@@ -21,6 +21,9 @@
       </div>
       
       <!-- add signup button to take user to register.html -->
+      <div>
+        <a href="register.html"><button>Sign Up</button></a>
+      </div>
 
     </form>
   </div>
